Add DjRatingTool. Eventually this will become a seperate tool that uses this library.